@@ -1,27 +1,26 @@
 package br.com.lett.crawlernode.crawlers.ranking.keywords.peru;
 
+import br.com.lett.crawlernode.core.fetcher.DynamicDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.ProxyCollection;
-import br.com.lett.crawlernode.core.fetcher.methods.ApacheDataFetcher;
-import br.com.lett.crawlernode.core.fetcher.methods.FetcherDataFetcher;
-import br.com.lett.crawlernode.core.fetcher.methods.JsoupDataFetcher;
-import br.com.lett.crawlernode.core.fetcher.models.Request;
-import br.com.lett.crawlernode.core.fetcher.models.Response;
 import br.com.lett.crawlernode.core.models.RankingProduct;
 import br.com.lett.crawlernode.core.models.RankingProductBuilder;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.CrawlerRankingKeywords;
 import br.com.lett.crawlernode.exceptions.MalformedProductException;
+import br.com.lett.crawlernode.util.CommonMethods;
 import br.com.lett.crawlernode.util.CrawlerUtils;
+import br.com.lett.crawlernode.util.Logging;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 import java.io.UnsupportedEncodingException;
-import java.util.*;
+import java.util.List;
 
 public class PeruLinioCrawler extends CrawlerRankingKeywords {
    public PeruLinioCrawler(Session session) {
+
       super(session);
    }
 
@@ -30,28 +29,25 @@ public class PeruLinioCrawler extends CrawlerRankingKeywords {
 
    @Override
    protected Document fetchDocument(String url) {
-
-      Map<String, String> headers = new HashMap<>();
-      headers.put("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9");
-      headers.put("Accept-Language", "en-US,en;q=0.9,pt;q=0.8,pt-PT;q=0.7");
-      headers.put("Cache-Control", "max-age=0");
-      headers.put("authority", "www.linio.com.pe");
-      headers.put("referer", "https://www.linio.com.pe/");
-
-      Request request = Request.RequestBuilder.create()
-         .setUrl(url)
-         .setHeaders(headers)
-         .setProxyservice(Arrays.asList(
-            ProxyCollection.SMART_PROXY_PE_HAPROXY,
-            ProxyCollection.NETNUT_RESIDENTIAL_ES_HAPROXY,
-            ProxyCollection.SMART_PROXY_PE,
-            ProxyCollection.SMART_PROXY_MX_HAPROXY
-         ))
-         .build();
-
-      Response response = CrawlerUtils.retryRequestWithListDataFetcher(request, List.of( new FetcherDataFetcher(),new ApacheDataFetcher(), new JsoupDataFetcher()), session);
-
-      return Jsoup.parse(response.getBody());
+      List<String> proxies = List.of(ProxyCollection.NETNUT_RESIDENTIAL_ES_HAPROXY, ProxyCollection.SMART_PROXY_PE_HAPROXY, ProxyCollection.NETNUT_RESIDENTIAL_ANY_HAPROXY);
+      int attemp = 0;
+      boolean succes = false;
+      Document doc = new Document("");
+      do {
+         try {
+            Logging.printLogDebug(logger, session, "Fetching page with webdriver...");
+            webdriver = DynamicDataFetcher.fetchPageWebdriver(url, proxies.get(attemp), session);
+            if (webdriver != null) {
+               doc = Jsoup.parse(webdriver.getCurrentPageSource());
+               succes = !doc.select(".catalogue-product.row").isEmpty();
+               webdriver.terminate();
+            }
+         } catch (Exception e) {
+            Logging.printLogDebug(logger, session, CommonMethods.getStackTrace(e));
+            Logging.printLogWarn(logger, "Page not captured");
+         }
+      } while (!succes && attemp++ < proxies.size());
+      return doc;
    }
 
    @Override
